--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -5,6 +5,8 @@
     window.location.href = "index.html";
   }
 </script>
+
+</script>
 <!DOCTYPE html> 
 <html>
 <head>
@@ -26,7 +28,8 @@
   </div>
 
   <script>
-    fetch("http://127.0.0.1:5000/admin")
+    fetch("https://broken-access-control.onrender.com/admin")
+
       .then(res => res.json())
       .then(data => {
         console.log("Backend message:", data.message);
