--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -9,9 +9,9 @@
     <h2>Welcome, <span id="user"></span> 👤</h2>
     <p>You are logged in as a <strong>regular user</strong>.</p>
     <ul style="text-align: left;">
-      <li>📝 You can view your personal notes</li>
-      <li>📧 Access your inbox</li>
-      <li>⚙️ Modify your settings</li>
+      <li>📝 View your personal notes</li>
+      <li>📧 Check your inbox</li>
+      <li>⚙️ Modify settings</li>
     </ul>
   </div>
 
